[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/DungeonSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/nine.png" type="Texture" id=2]
[ext_resource path="res://assets/items/7.png" type="Texture" id=3]
[ext_resource path="res://assets/items/8.png" type="Texture" id=4]
[ext_resource path="res://assets/items/1.png" type="Texture" id=5]
[ext_resource path="res://assets/items/4.png" type="Texture" id=6]
[ext_resource path="res://assets/items/6.png" type="Texture" id=7]
[ext_resource path="res://assets/items/5.png" type="Texture" id=8]
[ext_resource path="res://assets/items/2.png" type="Texture" id=9]
[ext_resource path="res://assets/items/3.png" type="Texture" id=10]
[ext_resource path="res://assets/EpilepsySansBold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://presets/font.tres" type="DynamicFont" id=12]
[ext_resource path="res://presets/Theme.tres" type="Theme" id=13]
[ext_resource path="res://presets/font-thin.tres" type="DynamicFont" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = ExtResource( 11 )

[sub_resource type="ButtonGroup" id=11]

[node name="DungeonSelect" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -161.0
margin_right = 179.0
margin_bottom = 164.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEnter" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.5594
margin_top = 92.5
margin_right = 177.559
margin_bottom = 117.5
theme = ExtResource( 13 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCancelEnter" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.5
margin_top = 122.5
margin_right = 177.5
margin_bottom = 147.5
theme = ExtResource( 13 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.9164
margin_top = 164.487
margin_right = -98.0836
margin_bottom = -177.513
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot0" type="Button" parent="Control/Slots"]
margin_right = 60.0
margin_bottom = 60.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot0"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot0"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.6875
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Button" parent="Control/Slots"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot1"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot1"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 61.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Button" parent="Control/Slots"]
margin_left = 140.0
margin_top = 0.529999
margin_right = 200.0
margin_bottom = 60.53
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot2"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot2"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_right = 1.0
margin_top = 3.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 12 )
text = "Enter Dungeon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dungeon1" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -119.5
margin_right = -63.0
margin_bottom = 83.5
rect_pivot_offset = Vector2( -397.095, 49.3496 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Dungeon1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsLabels" type="Label" parent="Dungeon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "Rec. Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Dungeon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "15
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dungeon1"]
anchor_right = 1.0
margin_top = 136.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = SubResource( 10 )
text = "Forest Missed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Dungeon1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.6674
margin_top = -32.0
margin_right = 11.3326
margin_bottom = -8.0
theme = ExtResource( 13 )
group = SubResource( 11 )

[node name="Dungeon2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -119.5
margin_right = 57.0
margin_bottom = 83.5
rect_pivot_offset = Vector2( -397.095, 49.3496 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Dungeon2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsLabels" type="Label" parent="Dungeon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "Rec. Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Dungeon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "15
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dungeon2"]
anchor_right = 1.0
margin_top = 136.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = SubResource( 10 )
text = "Forest Missed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Dungeon2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -32.0
margin_right = 12.0
margin_bottom = -8.0
theme = ExtResource( 13 )
group = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dungeon3" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 63.0
margin_top = -119.5
margin_right = 177.0
margin_bottom = 83.5
rect_pivot_offset = Vector2( -397.095, 49.3496 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Dungeon3"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsLabels" type="Label" parent="Dungeon3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "Rec. Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Dungeon3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -49.0
margin_right = 45.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = ExtResource( 14 )
text = "15
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dungeon3"]
anchor_right = 1.0
margin_top = 136.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 48.1665, 13 )
custom_fonts/font = SubResource( 10 )
text = "Forest Missed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Dungeon3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -32.0
margin_right = 12.0
margin_bottom = -8.0
theme = ExtResource( 13 )
group = SubResource( 11 )

[node name="Label" type="Label" parent="."]
margin_left = 16.683
margin_top = 273.47
margin_right = 80.683
margin_bottom = 294.47
theme = ExtResource( 13 )
text = "Difficulty:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.775
margin_top = 108.592
margin_right = 4.22461
margin_bottom = 133.592
theme = ExtResource( 13 )
text = "Easy"

[node name="TimerFadeOut" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="ButtonEnter" to="." method="_on_ButtonEnter_pressed"]
[connection signal="pressed" from="ButtonCancelEnter" to="." method="_on_ButtonCancelEnter_pressed"]
[connection signal="toggled" from="Dungeon1/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 1 ]]
[connection signal="toggled" from="Dungeon2/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 2 ]]
[connection signal="toggled" from="Dungeon3/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 3 ]]
[connection signal="timeout" from="TimerFadeOut" to="." method="_on_TimerFadeOut_timeout"]
